--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
                     <div class="method-list-content passed suite-Suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="runners.RunCucumber" class="method navigator-link" hash-for-method="runScenario(&quot;Verify the login functionality with invalid credentials&quot;, &quot;Login&quot;)">runScenario("Verify the login functionality with invalid credentials", "Login")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="runners.RunCucumber" class="method navigator-link" hash-for-method="runScenario(&quot;Verify the login functionality with valid credentials&quot;, &quot;Login&quot;)">runScenario("Verify the login functionality with valid credentials", "Login")</a> <!-- method navigator-link -->
@@ -123,6 +128,16 @@
               <span class="class-name">runners.RunCucumber</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Verify the login functionality with invalid credentials&quot;, &quot;Login&quot;)">
+                  </a> <!-- runScenario("Verify the login functionality with invalid credentials", "Login") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Verify the login functionality with invalid credentials", "Login")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="runScenario(&quot;Verify the login functionality with valid credentials&quot;, &quot;Login&quot;)">
@@ -197,16 +212,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runners.RunCucumber')
-data.setCell(0, 3, 167);
+data.setCell(0, 3, 292);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'runScenario')
+data.setCell(1, 2, 'runners.RunCucumber')
+data.setCell(1, 3, 6);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 167 ms</span>
+              <span class="suite-total-time">Total running time: 298 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -234,16 +253,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">runners.RunCucumber</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@63e5e5b4)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@7e46d648)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verify the login functionality with valid credentials", "Login")</span>
-                <span class="method-start">300 ms</span>
+                <span class="method-start">377 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Verify the login functionality with invalid credentials", "Login")</span>
+                <span class="method-start">671 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">469 ms</span>
+                <span class="method-start">680 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
